[tool.poetry]
name = "auto-encoder-decoder"
version = "0.1.0"
description = ""
authors = ["Jackson Baker <baker.jackson@rocketmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
