[tool.poetry]
name = "auto-encoder-decoder"
version = "0.1.0"
description = ""
authors = ["Jackson Baker <baker.jackson@rocketmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
numpy = "^2.1.3"
matplotlib = "^3.9.2"
scipy = "^1.14.1"
pyqt5 = "^5.15.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
